# gmsh

./: .gitignore
.github/: copilot-instructions.md
doc/: mesh_unit_test_plan.md  swap_patterns.md
tests/: CMakeLists.txt  TESTS.md  edgeSplit_test.cpp  generate_swap_patterns.cpp  order_ring_test.cpp  swap_candidates_eval.cpp  swappattern4_test.cpp  test_mesh.vtk  triangulations_count_test.cpp
tests/core/: buildEdgeCavity_unit_tests.cpp  edgeSwap_unit_tests.cpp  edge_ops_from_vtk.cpp  smoothVertex_unit_tests.cpp  test_boundary_recovery.cpp  test_generate_mesh.cpp  test_io_helpers.cpp  test_local_mod_ops.cpp  test_mesh_local_ops.cpp  test_quality_metrics.cpp  test_smoothing.cpp  test_swap_patterns.cpp
tests/edge_swap/: helpers.h  ring3_test.cpp  ring4_test.cpp  ring5_test.cpp  smoothVertex_test.cpp  vtk_ring_test.cpp
tutorials/: t6.msh
